<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="picture_title">Media</string>
    <string name="loan_simulator">Loan Simulator</string>
    <string name="property_type">Property Type</string>
    <string name="price">Price</string>
    <string name="surface">Surface</string>
    <string name="piece">Piece</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="point_of_interest">Point of Interest</string>
    <string name="status">Status</string>
    <string name="enter_date">Enter Date</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="agent">Agent</string>
    <string name="property">Property</string>
    <string name="money">$</string>
    <string name="gallery_btn">Get photo from gallery</string>
    <string name="apn_btn">Take a photo</string>
    <string name="create_property">Create Property</string>
    <string name="update_property">Update Property</string>
    <string name="location">Location</string>
    <string name="media">Media</string>
    <string name="loan_presentation">Please enter the amount you wish to borrow</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type">Type</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="update_notification_message">This property has been update with success</string>
    <string name="created_notification_message">This estate has been create with success</string>
    <string name="duration">Duration</string>
    <string name="amount">Amount</string>
    <string name="rate">Rate</string>
    <string name="input">Input</string>
    <string name="information_error">All information must be registered</string>
    <string name="start_calculation">Start calculation</string>
</resources>
