<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.insert.InsertActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/insert_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/white">

            <ImageButton
                android:id="@+id/return_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:background="@color/colorPrimary"/>
        </androidx.appcompat.widget.Toolbar>
            <EditText
                android:id="@+id/type_input"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/property_type"
                android:inputType="text"/>

            <EditText
                android:id="@+id/price_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="@string/price"/>

            <EditText
                android:id="@+id/surface_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/surface"
                android:inputType="number"
                android:completionThreshold="1"/>

            <EditText
                android:id="@+id/piece_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="@string/piece"/>

            <EditText
                android:id="@+id/description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="text" />

            <EditText
                android:id="@+id/address_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="text" />

            <EditText
                android:id="@+id/interest_point_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/point_of_interest"
                android:inputType="text" />

            <EditText
                android:id="@+id/agent_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/agent"
                android:inputType="text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sell_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/day_sell_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:ems="10"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/month_sell_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/month"
                app:layout_constraintStart_toStartOf="@id/day_sell_input"
                app:layout_constraintEnd_toEndOf="@id/year_sell_input"
                app:layout_constraintTop_toTopOf="parent"
                android:ems="10"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/year_sell_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/year"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:ems="10"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/status_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/status"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin">

        <Button
            android:id="@+id/gallery"
            android:layout_width="@dimen/button_insert"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:text="@string/gallery_btn"
            android:layout_marginEnd="@dimen/margin_big"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/apn"
            android:layout_width="@dimen/button_insert"
            android:layout_height="match_parent"
            android:layout_weight="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/apn_btn"
            android:textColor="#000"/>

        </LinearLayout>

        <Button
            android:id="@+id/create_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_property"
            android:textColor="@color/black"
            android:background="@color/pink"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>