<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsFragment"
    android:layout_marginTop="?attr/actionBarSize">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/media"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/carouselView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/media"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/photo_item"/>

    <TextView
        android:id="@+id/description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carouselView"
        android:text="@string/description"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_title"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/surface_title"
            app:layout_constraintTop_toTopOf="@id/surface_title"
            android:src="@drawable/ic_baseline_fit_screen_24"
            app:tint="@color/colorPrimary"/>

    <TextView
        android:id="@+id/surface_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:text="@string/surface"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="@dimen/margin_details"/>

    <TextView
        android:id="@+id/surface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/surface_title"
        android:text="@string/surface"
        app:layout_constraintTop_toBottomOf="@id/surface_title"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/piece_title"
            app:layout_constraintTop_toTopOf="@id/piece_title"
            android:src="@drawable/ic_baseline_house_24"
            app:tint="@color/colorPrimary"/>

    <TextView
        android:id="@+id/piece_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/surface_title"
        app:layout_constraintTop_toBottomOf="@id/surface"
        android:text="@string/piece"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginEnd="@dimen/margin_details"/>

    <TextView
        android:id="@+id/piece"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/piece_title"
        app:layout_constraintTop_toBottomOf="@id/piece_title"
        android:text="@string/piece"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/position_title"
        app:layout_constraintTop_toTopOf="@id/position_title"
        android:src="@drawable/ic_baseline_location_on_24"
        app:tint="@color/colorPrimary"/>

    <TextView
        android:id="@+id/position_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/surface_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/location"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/position_title"
        app:layout_constraintEnd_toEndOf="@id/position_title"
        android:text="@string/location"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nested"
        app:layout_constraintStart_toStartOf="parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        tools:context=".ui.details.DetailsFragment"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="30dp"
        android:src="@drawable/ic_baseline_mode_24"/>
</androidx.constraintlayout.widget.ConstraintLayout>